--- a/module2/4/4.2/Makefile
+++ b/module2/4/4.2/Makefile
@@ -2,11 +2,17 @@ CC = gcc
 
 all: build
 
-build: queue
+build: main
 
-queue: queue.o
-	$(CC) queue.o -o queue
+main: main.o queue.o
+	$(CC) main.o queue.o -o main
 	rm *.o
+
+main.o: main.c queue.h
+	$(CC) -c main.c
 
 queue.o: queue.c queue.h
 	$(CC) -c queue.c
+
+clean:
+	rm main
